--- a/portworx/storageclasses/storageclasses.yaml
+++ b/portworx/storageclasses/storageclasses.yaml
@@ -3,7 +3,7 @@ apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: portworx-sc
-provisioner: kubernetes.io/portworx-volume
+provisioner: pxd.portworx.com
 parameters:
   repl: "2"
   priority_io: high
@@ -14,8 +14,20 @@ apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: px-repl3-sc
-provisioner: kubernetes.io/portworx-volume
+provisioner: pxd.portworx.com
 parameters:
   repl: "3"
   priority_io: high
+allowVolumeExpansion: true
+---
+apiVersion: storage.k8s.io/v1
+kind: StorageClass
+metadata:
+  name: px-sharedv4
+provisioner: pxd.portworx.com
+parameters:
+  repl: "3"
+  sharedv4: "true"
+  sharedv4_mount_options: "vers=4.0"
+  io_profile: "auto"
 allowVolumeExpansion: true
